Added HTML files

--- a/prayerbook/prayer_0_0_en.html
+++ b/prayerbook/prayer_0_0_en.html
@@ -1,4 +1,11 @@
 <html>
+<head>
+    <style>
+        .person { text-decoration: underline; }
+        .rubric { color: red; font-size: 80%; font-family: 华文仿宋, 仿宋; }
+    </style>
+</head>
+    
 <body>
     
 <h1> Prayer of the Publican </h1>
