Font size option added, Options dialog added to Prayer view.

--- a/prayerbook/prayer_1_1_en.html
+++ b/prayerbook/prayer_1_1_en.html
@@ -7,7 +7,7 @@
             </style>
     </head>
     
-    <body>
+    <body style="font-size:FONTSIZE;">
 
 
 <p><span class="rubric">Troparia, tone 4:</span> Let us, sinful
