--- a/prayerbook/prayer_1_2_en.html
+++ b/prayerbook/prayer_1_2_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body>
+    <body style="font-size:FONTSIZE;">
 
 
 <p></p><p><span class="rubric">Troparion:</span> O Angel of God, my holy
