--- a/prayerbook/prayer_2_1_en.html
+++ b/prayerbook/prayer_2_1_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body>
+    <body style="font-size:FONTSIZE;">
 
 <p class="rubric" align="center">Tone 2</p>
 
