--- a/prayerbook/prayer_2_0_en.html
+++ b/prayerbook/prayer_2_0_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body>
+    <body style="font-size:FONTSIZE;">
 
 
 <h1>The Liturgy of the Catechumens</h1>
