Removed Chinese language and Typica from this release

--- a/prayerbook/html/prayer_group_2_cn.html
+++ b/prayerbook/html/prayer_group_2_cn.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <style>
@@ -10,305 +9,359 @@
     <body style="font-size:FONTSIZE;">
 
 
-<h1>向我们的主耶稣基督的圣颂典</h1>
-<p class="rubric" align="center">
-第二调式
-</p><h4>
-    圣歌一
-</h4><p class="rubric">
-首节：
-</p><p>
-昔日，上帝以其大能淹没了法老的军队，使之沉入深渊。降生的圣言取消了致死的罪恶。主光荣显赫，因祂已经受到辉煌的荣耀。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-至甘饴的耶稣基督，富于忍耐的耶稣，求祢医治我们的灵魂。耶稣，求祢使我心饴悦。至仁慈者啊，我向祢祈求，耶稣我的救主，因祢拯救了我，我将荣耀归于祢。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-至甘饴的耶稣基督，耶稣，求祢给我敞开悔改之门。耶稣啊，热爱世人者，我将自己投于祢的足下，求祢收纳我。耶稣，我的救主，我热切地恳求祢宽恕我的罪过。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-至甘饴的耶稣基督，耶稣，求祢由欺诈者撒旦手中将我夺走。耶稣啊，在祢的荣耀中让我待立于你右边，耶稣我救主，求祢不要让我站在左边。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-圣母啊，你诞生了耶稣我们的上帝，求你为我们--你无用的奴仆祈祷，借着你的祈祷，无玷者啊，我们这些败坏的人得以免受痛苦折磨，无瑕者啊，我们因此得以获享永恒的荣耀。
-</p><h4>
-    圣歌三
-</h4><p class="rubric">
-首节：
-</p><p>
-祢将我建立信德的磐石上，赐予我克胜我仇敌的能力，我灵欢欣踊跃，我要歌唱：主啊，除祢以外，没有人如同我们的上帝一样圣洁、一样正义。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-我的耶稣啊，热爱世人者，求祢俯听祢的奴仆满怀痛悔的呼求；耶稣，求祢解救我免受谴责与惩罚，至甘饴至仁慈的耶稣啊，惟有祢宽忍为怀。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我的耶稣啊，求祢接纳我这含泪俯伏于地的人；我的耶稣，主啊，求祢救我免于地狱，至甘饴至仁慈的耶稣。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我的耶稣啊，我把祢给我的时间都浪费于放纵情欲之中。我的耶稣啊，求祢不要抛弃我。我的耶稣啊，但求祢召唤我。主啊，我向祢祈祷，至甘饴的耶稣，拯救我！
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-圣母啊，你诞生了我的耶稣，求你恳求祂拯救我免于地狱。充满圣宠者啊，你是受痛苦折磨者惟一的庇护者。全然无瑕者啊，使我配得那生来即未曾拥有过的生命。
-</p><p>
-求主怜悯。<span class="rubric">（三遍）</span>
-</p><p>
-荣耀归于父、及子、及圣灵，自今至永远，及于万世。阿民。
-</p><p class="rubric">
-坐赞词：
-</p><p>
-耶稣我的救主啊，祢曾拯救了浪子。耶稣我的救主，祢曾接纳了娼妓。现在，至仁慈的耶稣，求祢可怜我；耶稣我的恩主啊，求祢怜悯我，求祢拯救我，就如祢曾怜悯了玛拿西，我的耶稣，惟一热爱世人者。
-</p><p>
-荣耀归于父、及子、及圣灵，自今至永远，及于万世。阿民。
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-至洁者啊，你以你的代祷，助佑那些为你的祈祷所解救、为你圣子的十字架所保护的人，我们热忱地称颂你。
-</p><h4>
-    圣歌四
-</h4><p class="rubric">
-首节：
-</p><p>
-主，祢既未派遣一位使者，也不是打发一位天使前来，而是由童贞女所生，亲自降凡，拯救我们，全体世人。因此，我向祢高呼：主啊，荣耀归于祢的权能。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-我的耶稣啊，求祢医治灵魂的创伤。我的耶稣，我向祢祈祷，求祢把我从败坏人灵的撒旦手中夺走，我荣耀的耶稣，求祢拯救我。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我至甘饴的耶稣，我犯了罪。满有仁慈怜悯的耶稣，拯救我这个奔赴祢护佑之下的人吧，使我堪当承受祢的国度，至宽忍的耶稣。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-没有一个人像我这样地犯了罪，我的耶稣啊，我是如此的可怜，但现在我俯首祈祷：我的耶稣啊，拯救我，我的耶稣，赐我生命。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-众口称颂的童贞女啊，你诞生了主耶稣，求你恳请祂解救所有歌颂你并呼求你至高上帝之母的人脱离痛苦折磨。
-</p><h4>
-    圣歌五
-</h4><p class="rubric">
-首节：
-</p><p>
-基督我的救主啊，祢是躺卧于幽暗中者的光明，无望者的救赎。和平之王啊，我们清晨即起来向祢祈祷，求以祢的光启迪我，因我知道除祢以外，没有上帝。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-我的耶稣啊，祢是我理智之光明，我绝望灵魂的救恩，我的耶稣，我的救主！拯救我这呼求祢的人免受痛苦折磨及地狱的刑罚。基督啊，我的耶稣，求祢拯救我这可怜之人。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我彻底陷于可耻的情欲之中，我的耶稣，我现在呼求：我的耶稣，求祢向我伸出援助之手，把我救拔出来，我向祢呼求：基督啊，我的耶稣，求祢拯救我这可怜之人。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-偕同败坏的理智，我向祢呼吁，耶稣啊，求祢洗净我罪恶的污秽，解救我这个因着无知而滑落于罪恶深渊里的人，救主啊，我的耶稣，我向祢祈祷，拯救我。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-永贞上帝之母啊，你诞生了耶稣，请祈求祂拯救所有正教的修士及子民，求你解救那些呼求你的人免于地狱，他们向你呼求说：除你之外，我们不知还有谁是有力的代祷者。
-</p><h4>
-    圣歌六
-</h4><p class="rubric">
-首节：
-</p><p>
-我在罪恶的渊薮里辗转，上帝啊，我向祢那深不可测的慈悯深渊哀求，把我从败坏堕落之中提拔出来吧。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-至仁慈的基督，我的耶稣啊，收纳我这向祢忏悔己罪的人，主啊，拯救我，耶稣啊，求祢人败坏之中将我攫取，我的耶稣啊。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我的耶稣啊，再也没有人像我这样放荡的人了，耶稣，热爱世人者啊，我是何其可怜啊，耶稣，求祢拯救我。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我的耶稣啊，我的情欲超过了娼妓与浪子，比玛拿西与税吏更甚，我的耶稣啊，甚至强盗与尼尼微人都不如我，啊，耶稣。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-无瑕无玷之贞女，你诞生了我的耶稣基督，求你洁净我这污秽之人，现在就以你祈祷的牛膝草洁净我。
-</p><p>
-求主怜悯。<span class="rubric">（三遍）</span>
-</p><p>
-荣耀归于父、及子、及圣灵，自今至永远，及于万世。阿民。
-</p><p class="rubric">
-集祷颂：
-</p><p>
-至甘饴的耶稣，世界之光，求以祢壮丽辉煌的神圣景象启明我灵魂的双目，上帝之子啊，我要歌颂祢，永不暗淡的光明。
-</p><h4>
-    圣歌七
-</h4><p class="rubric">
-首节：
-</p><p>
-当那金像在杜拉平原受人敬拜时，祢的三位圣童对那道不敬真神的命令不屑一顾。他们被投入烈火，却不为烈火所灼伤，他们歌唱道：我们祖先的上帝，赞颂归于祢。
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-基督耶稣啊，在这世上没有人犯罪得罪祢如我一般，我的耶稣啊，我是何其鄙陋不堪，放浪形骸。但我要向祢呼求，我的耶稣，求祢怜悯我，我要歌唱：我们祖先的上帝，赞颂归于祢。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-基督耶稣啊，求祢打击我，使我对祢心怀敬畏之情，我的耶稣，求你引导我到达祢避风的港湾，我富于怜悯的耶稣，祢拯救了我，我要向祢歌唱：我们祖先的上帝，赞颂归于祢。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-基督耶稣啊，我一万次向祢许下悔改的誓言，但是，我的耶稣，我何其可怜，我欺骗了祢。因此我向祢呼求，我的耶稣，光照我冷酷的灵魂，基督啊，祢是我们祖先的上帝。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-全然无瑕者啊，你奇妙而超越本性地诞生了耶稣基督，请祈求祂，童贞女啊，宽恕我所犯的所有相我本性的罪恶，我这得救之人要呼求：在肉身内孕育了上帝者啊，你是有福。
-</p><h4>
-    圣歌八
-</h4><p class="rubric">
-首节：
-</p><p>
-让我们歌颂上帝所作的奇工，祂降入烈火窑中与希伯来的儿童同在，将火焰化作甘露，让我们称扬赞颂作为主的祂，世世无尽。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-我的耶稣啊，我恳求祢，犹如祢曾拯救了娼妓出离众多的罪恶，同样，也求祢拯救我，基督，我的耶稣啊，求祢洁净我的灵魂，啊，我的耶稣。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-耶稣啊，我屈服于愚蠢而毫无理性的逸乐之中，我成为愚蠢而无理性者，我的耶稣，我是何其可怜，我的确可怜万分，犹如畜牲，因此，救主耶稣啊，求祢救我摆脱愚昧无知，消除我的兽性。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-耶稣啊，落入败坏灵魂的强盗手中，现在他们撕裂了我由神织成的长衣，我的耶稣啊，我躺卧于地，遍体凌伤，我的基督，求祢给我在伤口上涂抹油和酒。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-玛利亚啊，上帝之母，你无可言喻地诞生了基督，我们的耶稣和上帝，至贞之童女，求你祈求祂总要拯救祂的仆役与歌唱者。
-</p><h4>
-    圣歌九
-</h4>
-<p class="rubric">
-首节：
-</p><p>
-上帝的圣言，出自上帝的上帝，当阿达穆令人忧伤的因偷吃禁果而堕落之后，祢以无可比拟的智慧再造了他，祢为了我们无可言喻地由至圣童贞取得肉躯。我们信友彼此同心合意，以诗歌赞美祂：
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p class="rubric">
-圣颂：
-</p><p>
-我的耶稣，因着我可耻的不当行径，我的罪超过了玛拿西与税吏，娼妓与浪子。仁慈的耶稣啊，我的罪比强盗更甚。耶稣啊，求祢医治我，我的耶稣，求祢拯救我！
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我的耶稣，我是何其不幸，因我可鄙的情欲，我的罪超过所有自阿达穆以来所有犯罪得罪祢的人，无论他是生活在祢颁布律法之前，还是生活在律法的时代，或是生活律法之后的恩宠内。耶稣啊，我的耶稣，但求祢以祢的审判拯救我，我的耶稣。
-</p><p class="rubric">
-节句：
-</p><p>
-<i>至甘饴的耶稣，拯救我们。</i>
-</p><p>
-我的耶稣，求祢不要使我远离祢那无可言喻的荣耀，不要将我归入祢左手的羊群之中，至甘饴的耶稣。但求祢将我列于右手的羊群之中，基督啊，我的耶稣，求赐我安息于上帝的慈悯之中。
-</p><p>
-<i>至圣诞神女，拯救我们。</i>
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-上帝之母啊，你诞生了耶稣，唯一无玷的童贞玛利亚啊，求你恳求祂，至洁者啊，祂是你的圣子与造主，愿祂解救所有向你求助者免于诱惑、危险以及将来烈火。
-</p><p class="rubric">
-差谴颂：
-</p><p>
-耶稣啊，智慧和智力的赐予者，乞丐的供给者，孤儿的保护者，病人的医治者，求祢医治并光照我的心，耶稣啊，我的心为罪恶的伤口以及情欲的脓创所覆盖，耶稣啊，求祢拯救我。
-</p><p>
-荣耀归于父、及子、及圣灵，自今至永远，及于万世。阿民。
-</p><p class="rubric">
-诞神女颂：
-</p><p>
-童贞女啊，求你启迪我的理智，以那经由你发出的光辉，转化我的心，驱散罪恶的幽暗，消除我懒惰的阴影。
-</p><h4>
-    向耶稣基督诵
-</h4><p>
-主、君宰、耶稣基督、我们的上帝啊，因着祢对世人无可言喻的爱，在这末后的时代，祢由永贞玛利亚取了肉躯。主啊，我们荣耀祢救赎的上智及对我们--祢仆人的看顾。我们赞美祢，藉着祢我们认识了父。我们赞颂祢，由于祢，圣灵降临世上。我们向祢的至圣之母致敬，她服务于祢那令人敬畏的降生奥迹。我们歌颂天使的歌侣，他们是祢至高权威的仆役和讴歌者。主啊，我们宣告前驱圣约安为有福，他为祢施行浸礼。我们尊崇诸位先知，他们向世人宣告了祢。我们光荣祢的圣使徒。我们庆贺众殉道者。我们赞扬祢的诸司祭。我们敬礼祢的诸圣并歌颂所有的义人。我们，祢的仆役，将这无尽而不可言喻的神圣歌侣作为我们的代祷者呈献给祢，我们至慷慨的上帝，并向祢祈祷：因着祢的诸位圣人，尤其是因着祢神圣的宽宏大量，求祢惠赐我们罪过的赦免，因祢当受赞美直到永远。阿民。
+<h1>集祷颂一</h1>
+
+
+
+统帅及主宰，地狱的摧毁者，我——祢的受造物与仆役——向祢献上赞美之歌，因为祢已救我脱离永死。当祢以无可言喻的仁爱，解救我于种种危难时，我要向祢呼求：耶稣，上帝之子，怜悯我。
+
+<h1>诗节一</h1>
+
+<p>&nbsp;&nbsp;众天使的创造者，万军之主！祢曾开启了聋哑者的耳和口，如今，也求祢开启我茫然无知的心灵和唇舌，以赞美祢的至圣之名，如此，我将向祢呼求：
 </p>
+<p>&nbsp;&nbsp;耶稣最奇妙者，天使的惊讶。
+
+<br>&nbsp;&nbsp;耶稣最有力者，祖先的解脱。
+
+<br>&nbsp;&nbsp;耶稣最甘饴者，圣祖的欢欣。
+
+<br>&nbsp;&nbsp;耶稣最荣耀者，君王的保障。
+
+<br>&nbsp;&nbsp;耶稣最仁爱者，先知的成全。
+
+<br>&nbsp;&nbsp;耶稣最神奇者，殉道者的力量。
+
+<br>&nbsp;&nbsp;耶稣最谦和者，修士的欣喜。
+
+<br>&nbsp;&nbsp;耶稣最良善者，司祭的怡悦。
+
+<br>&nbsp;&nbsp;耶稣最慈悲者，持斋者的节制。
+
+<br>&nbsp;&nbsp;耶稣最温柔者，圣徒的快乐。
+
+<br>&nbsp;&nbsp;耶稣最可敬者，守贞者的洁德。
+
+<br>&nbsp;&nbsp;耶稣永恒者，罪人的救援。
+
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂二</h1>
+
+
+
+主啊，当祢看见那寡妇苦苦地哀泣，便动了怜悯之心，使她正被运去安葬的儿子死而复生，热爱世人者啊，也求祢同样怜悯我，并使我因罪恶而死亡的灵魂复苏，如此，我将向祢高歌：阿肋路亚！
+
+<h1>诗节二</h1>
+
+<p>&nbsp;&nbsp;斐理伯为寻求超性之道，向祢请求说：“主，把父显示给我们吧。”而祢答道：“我和你们在一起如此之久，你还不知道我在父内，父在我内吗？”不可测度者啊，我同样怀著敬畏向祢呼求：
+</p>
+<p>&nbsp;&nbsp;耶稣，永生的上帝。
+
+<br>&nbsp;&nbsp;耶稣，全权的君王。
+
+<br>&nbsp;&nbsp;耶稣，历尽苦难的主宰。
+
+<br>&nbsp;&nbsp;耶稣，最慈悲的救主。
+
+<br>&nbsp;&nbsp;耶稣，我良善的护卫。
+
+<br>&nbsp;&nbsp;耶稣，洗净我的罪过。
+
+<br>&nbsp;&nbsp;耶稣，消除我的邪恶。
+
+<br>&nbsp;&nbsp;耶稣，饶恕我的不义。
+
+<br>&nbsp;&nbsp;耶稣，我的希望，不要将我抛弃。
+
+<br>&nbsp;&nbsp;耶稣，我的救援，不要将我拒绝。
+
+<br>&nbsp;&nbsp;耶稣，我的肇始，不要将我忘怀。
+
+<br>&nbsp;&nbsp;耶稣，我的善牧，不要将我失落。
+
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂三</h1>
+
+
+
+耶稣啊，祢曾将自上而来的权柄赋予守侯在耶路撒冷的众宗徒，也求祢以祢圣灵的温暖覆庇我，用各种善工充实我，并恩赐我能怀著爱慕之心向祢歌唱：阿肋路亚！
+
+<h1>诗节三</h1>
+
+<p>
+耶稣啊，因著祢丰厚的慈爱，祢曾召唤了税吏、罪人和外邦人。如今，求祢不要藐视我——一个如他们一般的人，却如同接受宝贵的没药一样悦纳这赞歌：
+</p>
+<p>耶稣，无敌的权能。
+<br>&nbsp;&nbsp;耶稣，无尽的慈悯。
+<br>&nbsp;&nbsp;耶稣，绚丽的光华。
+<br>&nbsp;&nbsp;耶稣，不可言传的仁爱。
+<br>&nbsp;&nbsp;耶稣，永生上帝之子。
+<br>&nbsp;&nbsp;耶稣，怜悯我罪人。
+<br>&nbsp;&nbsp;耶稣，俯听我——孕育于邪恶中者。
+<br>&nbsp;&nbsp;耶稣，洁净我——诞生于罪过中者。
+<br>&nbsp;&nbsp;耶稣，教导我——卑微无用之人。
+<br>&nbsp;&nbsp;耶稣，光照我的暗昧。
+<br>&nbsp;&nbsp;耶稣，净化我——污秽不洁之人。
+<br>&nbsp;&nbsp;耶稣，重新接纳我——一个浪子。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂四</h1>
+
+
+
+受到内心怀疑的风暴搅扰，伯多禄险遭倾覆。但当看见了祢——耶稣——以肉躯行走于水面之上，他便宣认祢是真上帝，并抓住了救援之手，因而欢呼：阿肋路亚！
+
+
+<h1>诗节四</h1>
+
+<p>&nbsp;&nbsp;主啊，当那瞽目者听说祢路过时，就高声哀求：“耶稣，达味之子，可怜我吧！”于是祢叫他近前，并开了他的眼目。也求祢同样以祢的仁爱开启我心灵的眼睛，使我能向祢呼求说：
+</p>
+<p>&nbsp;&nbsp;耶稣，诸天万象的创造者。
+<br>&nbsp;&nbsp;耶稣，世间万民的救赎者。
+<br>&nbsp;&nbsp;耶稣，地狱权势的摧毁者。
+<br>&nbsp;&nbsp;耶稣，所有受造物的装饰者。
+<br>&nbsp;&nbsp;耶稣，我灵魂的慰藉者。
+<br>&nbsp;&nbsp;耶稣，我心灵的启蒙者。
+<br>&nbsp;&nbsp;耶稣，我内心的喜乐。
+<br>&nbsp;&nbsp;耶稣，我肉躯的康宁。
+<br>&nbsp;&nbsp;耶稣，我的救主，拯救我。
+<br>&nbsp;&nbsp;耶稣，我的光明，烛照我。
+<br>&nbsp;&nbsp;耶稣，解救我免于一切痛苦。
+<br>&nbsp;&nbsp;耶稣，我虽不配，仍请施以拯救。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂五</h1>
+
+
+
+耶稣啊，昔日藉著祢宝血神圣的倾流，您把我们从律法的诅咒下赎回，如今也求祢救我免陷于那毒蛇以肉欲、邪情和失望所罗织的诱惑之网，令我能向祢高歌：阿肋路亚！
+
+
+<h1>诗节五</h1>
+
+<p>
+当看见造物者以凡人的形象出现，并得知了他就是上主；希伯来的儿童们手持树枝欢欣迎请，并大声欢呼：贺撒纳！我们则向祢献上歌颂说：
+</p><p>
+耶稣，真实的上帝。
+<br>&nbsp;&nbsp;耶稣，达味之子。
+<br>&nbsp;&nbsp;耶稣，荣耀的君王。
+<br>&nbsp;&nbsp;耶稣，无玷的羔羊。
+<br>&nbsp;&nbsp;耶稣，奇妙的牧者。
+<br>&nbsp;&nbsp;耶稣，我婴龄的护守者。
+<br>&nbsp;&nbsp;耶稣，我幼年的哺育者。
+<br>&nbsp;&nbsp;耶稣，我垂暮的赞美。
+<br>&nbsp;&nbsp;耶稣，我临终的希望。
+<br>&nbsp;&nbsp;耶稣，我死后的生命。
+<br>&nbsp;&nbsp;耶稣，我受审判时的安慰。
+<br>&nbsp;&nbsp;耶稣，我的渴慕，不要令我蒙羞。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂六</h1>
+
+
+
+耶稣啊，祢曾显现于世，身为无限者却甘愿与人类共处，从而满全了众先知受默感而传达的言语及讯息。自此我们由祢的圣伤获得治愈，而能学习歌唱：阿肋路亚！
+
+
+<h1>诗节六 </h1>
+
+<p>
+真光的黎明初照于世间，魔鬼的妄想便被驱逐，因为我们的救主啊，所有偶像都无法抵御祢的大能。我们这些蒙受救恩的人向祢欢呼：
+</p><p>
+耶稣，驱除虚幻的真理。
+<br>&nbsp;&nbsp;耶稣，超越众光的光明。
+<br>&nbsp;&nbsp;耶稣，最为有力的君王。
+<br>&nbsp;&nbsp;耶稣，永施怜悯的上帝。
+<br>&nbsp;&nbsp;耶稣，生命之粮，饱饫我这饥饿者。
+<br>&nbsp;&nbsp;耶稣，圣智之泉，复苏我这乾渴者。
+<br>&nbsp;&nbsp;耶稣，欢欣之袍，遮盖我这赤裸者。
+<br>&nbsp;&nbsp;耶稣，悦乐之衣，覆庇我这不配者。
+<br>&nbsp;&nbsp;耶稣，祈求者的恩主，求赐我痛悔己罪。
+<br>&nbsp;&nbsp;耶稣，寻觅者的收获，请收纳我的灵魂。
+<br>&nbsp;&nbsp;耶稣，叩门者的开启，启明我可怜的心。
+<br>&nbsp;&nbsp;耶稣，罪人们的救赎，请洗去我的罪恶。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂七</h1>
+
+
+耶稣啊，怀著彰显那自古隐藏之奥迹的渴望，祢有如绵羊被导向屠场，又如羔羊来到剪毛者的面前。身为上帝祢又由死者中复活，并荣耀地上升天庭，我们这些因祢而复生的人，与祢一同高歌：阿肋路亚。
+
+
+<h1>诗节七</h1>
+
+<p>
+造物主向我们显示了奇妙的造化，他不经人道而由童贞女取得肉躯；不破坏封印而由坟墓中复活；当门户紧闭时，以肉身进入宗徒们的居所。怀著对此的惊叹，我们向祢歌唱：
+</p><p>
+耶稣，不可限量的圣言。
+<br>&nbsp;&nbsp;耶稣，不可洞悉的知识。
+<br>&nbsp;&nbsp;耶稣，不可思议的权能。
+<br>&nbsp;&nbsp;耶稣，不可测度的智慧。
+<br>&nbsp;&nbsp;耶稣，不可描绘的神明。
+<br>&nbsp;&nbsp;耶稣，不可制约的主宰。
+<br>&nbsp;&nbsp;耶稣，不可战胜的国度。
+<br>&nbsp;&nbsp;耶稣，永无终结的主权。
+<br>&nbsp;&nbsp;耶稣，至高的能力。
+<br>&nbsp;&nbsp;耶稣，永恒的权柄。
+<br>&nbsp;&nbsp;耶稣，我的创造者，怜恤我。
+<br>&nbsp;&nbsp;耶稣，我的救主，拯救我。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂八</h1>
+
+
+
+目睹了上帝奇妙地道成肉身，让我们躲避这骄傲的世俗，一心专注于神圣的事物；因为上帝降来人间，使我们上升天庭，我们要向他欢呼：阿肋路亚！
+
+
+<h1>诗节八</h1>
+
+<p>&nbsp;&nbsp;身兼上主和常人，祢的本性却决不会混淆，不可计量者啊，祢自愿为我们承受苦难，以祢的圣死摧毁了我们的永死，以祢的复活赐给了我们新生，我们要向祢歌唱：
+</p>
+<p>&nbsp;&nbsp;耶稣，内心的甘饴。
+<br>&nbsp;&nbsp;耶稣，肉躯的力量。
+<br>&nbsp;&nbsp;耶稣，灵魂的纯洁。
+<br>&nbsp;&nbsp;耶稣，精神的光照。
+<br>&nbsp;&nbsp;耶稣，良知的欢忭。
+<br>&nbsp;&nbsp;耶稣，确信的希望。
+<br>&nbsp;&nbsp;耶稣，永恒的记忆。
+<br>&nbsp;&nbsp;耶稣，崇高的赞美。
+<br>&nbsp;&nbsp;耶稣，我至上的荣耀。
+<br>&nbsp;&nbsp;耶稣，我的冀望，不要将我抛弃。
+<br>&nbsp;&nbsp;耶稣，我的善牧，挽回我。
+<br>&nbsp;&nbsp;耶稣，我的救主，拯救我。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂九</h1>
+
+
+
+耶稣啊，天使的军旅无时或息地赞颂祢的至圣之名，高呼道：圣哉、圣哉、圣哉。而我们这些世上的罪人，也以卑微的声音歌唱说：阿肋路亚。
+
+
+<h1>诗节九</h1>
+
+<p>&nbsp;&nbsp;耶稣我们的救主啊，我们看见最雄辩的演说家言及祢时，犹如鱼儿般缄默无言。因为以他们的能力无法讲述，祢何以同时是完全的人和不变的上帝。我们赞叹这奥迹，诚恳地向祢呼求：
+</p>
+<p>&nbsp;&nbsp;耶稣，永生的上帝。
+<br>&nbsp;&nbsp;耶稣，众王之王。
+<br>&nbsp;&nbsp;耶稣，万主之主。
+<br>&nbsp;&nbsp;耶稣，生者死者的审判官。
+<br>&nbsp;&nbsp;耶稣，无望者的希望。
+<br>&nbsp;&nbsp;耶稣，哀痛者的安慰。
+<br>&nbsp;&nbsp;耶稣，贫困者的荣耀。
+<br>&nbsp;&nbsp;耶稣，不要照我的行为责罚我。
+<br>&nbsp;&nbsp;耶稣，凭著祢的慈悲洁净我。
+<br>&nbsp;&nbsp;耶稣，带走我的失望。
+<br>&nbsp;&nbsp;耶稣，光照我内心的思想。
+<br>&nbsp;&nbsp;耶稣，使我常常存想死亡。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂十</h1>
+
+
+
+东升的旭日啊，祢怀著救世的热望，西降到我们本性的黑暗中，并自谦自卑，以致于死，故而祢的圣名被举扬于一切名号之上。由天上地下的万族口中，祢聆纳其赞美的歌声：阿肋路亚。
+
+
+<h1>诗节十</h1>
+
+<p>&nbsp;&nbsp;永生的君王，抚慰者，真实的基督，求祢从种种污秽中洁净我们，如同祢曾洁净了那十个麻风病人；也求祢医治我们，如同祢医治了税吏匝凯贪婪的心，让我们能怀著痛悔向祢呼求说：
+</p>
+<p>&nbsp;&nbsp;耶稣，不朽的宝库。
+<br>&nbsp;&nbsp;耶稣，无穷的财富。
+<br>&nbsp;&nbsp;耶稣，坚固的食粮。
+<br>&nbsp;&nbsp;耶稣，不竭的饮品。
+<br>&nbsp;&nbsp;耶稣，穷人的衣袍。
+<br>&nbsp;&nbsp;耶稣，鳏寡的保障。
+<br>&nbsp;&nbsp;耶稣，孤儿的护卫。
+<br>&nbsp;&nbsp;耶稣，劳苦者的救助。
+<br>&nbsp;&nbsp;耶稣，朝圣者的向导。
+<br>&nbsp;&nbsp;耶稣，航海者的舵手。
+<br>&nbsp;&nbsp;耶稣，平息风浪者。
+<br>&nbsp;&nbsp;耶稣，扶助我这跌倒的人。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂十一</h1>
+
+
+
+我虽是不配，仍要向祢献上这最卑微的歌颂。我要如同那客纳罕的妇人般向祢哀求：耶稣啊，怜悯我吧！但这并非是为我的女儿，而是为了我那因情欲而狂乱，因愤怒而燃烧的肉体。请祢恩赐我痊愈，让我向祢欢呼：阿肋路亚！
+
+
+<h1>诗节十一</h1>
+
+<p>&nbsp;&nbsp;保禄起先曾迫害过祢——光照居于蒙昧黑暗者的真光，但他体验到了神圣启蒙之声的力量，也明澈了灵魂归依上帝的迅捷。求祢同样开启我昏昧的心目，我要呼求说：
+</p>
+
+<p>&nbsp;&nbsp;耶稣，我全权的君王。
+<br>&nbsp;&nbsp;耶稣，我全能的上帝。
+<br>&nbsp;&nbsp;耶稣，我不朽的主。
+<br>&nbsp;&nbsp;耶稣，我最荣耀的创造者。
+<br>&nbsp;&nbsp;耶稣，我最良善的导师。
+<br>&nbsp;&nbsp;耶稣，我最慈悯的牧者。
+<br>&nbsp;&nbsp;耶稣，我最仁爱的主宰。
+<br>&nbsp;&nbsp;耶稣，我最慈悲的救主。
+<br>&nbsp;&nbsp;耶稣，光照我因情欲而昏昧的感官。
+<br>&nbsp;&nbsp;耶稣，医治我为罪恶所创伤的肉体。
+<br>&nbsp;&nbsp;耶稣，从自负的思想中洁净我的意念。
+<br>&nbsp;&nbsp;耶稣，由邪恶的欲望中护守我的心灵。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂十二</h1>
+
+
+
+耶稣啊，请赏赐给我祢的恩典，免除我的一切罪债，收纳我这忏悔者，如同祢曾收纳了否认祢的伯多禄；召唤我这沮丧者，如同祢昔日召唤了迫害祢的保禄；并请俯听我对祢的歌颂：阿肋路亚！
+
+
+<h1>诗节十二</h1>
+
+<p>&nbsp;&nbsp;我们赞美你的道成肉身，我们无不归荣耀与祢，我们也偕同多默，宣认祢是我们的主，我们的上帝，与父同坐，将来审判生者死者的那一位。请赏赐我于彼时得以站在祢的右边，如今我要向祢呼求：
+</p>
+<p>&nbsp;&nbsp;耶稣，永恒之君，怜悯我。
+<br>&nbsp;&nbsp;耶稣，芬芳之花，使我馨香。
+<br>&nbsp;&nbsp;耶稣，爱的温馨，使我温暖。
+<br>&nbsp;&nbsp;耶稣，不朽的殿宇，给我庇护。
+<br>&nbsp;&nbsp;耶稣，光明的衣袍，使我华美。
+<br>&nbsp;&nbsp;耶稣，无价的珍珠，照耀我。
+<br>&nbsp;&nbsp;耶稣，宝贵的磐石，启明我。
+<br>&nbsp;&nbsp;耶稣，义德之日，光照我。
+<br>&nbsp;&nbsp;耶稣，神圣之光，令我绚丽。
+<br>&nbsp;&nbsp;耶稣，救我脱离灵魂和肉身的疾患。
+<br>&nbsp;&nbsp;耶稣，救我免于仇敌之手。
+<br>&nbsp;&nbsp;耶稣，救我免受永火及永苦。
+<br>&nbsp;&nbsp;耶稣，上帝之子，怜悯我。
+</p>
+
+<h1>集祷颂十三</h1>
+
+<p>&nbsp;&nbsp;最甘饴最仁善的耶稣啊，请收纳我们这卑微的祈祷，犹如祢曾悦纳了穷寡妇微薄的奉献。并求祢保全祢的信众，脱离所有可见与不可见的仇敌，免遭异邦的侵害，远离疾病和饥谨，脱免种种苦难和致死的创伤，也救我们免于今后的一切磨难；我们这些蒙恩的人同声向祢高唱：阿肋路亚！<span class="rubric">（三遍）</span>
+</p>
+<p class="rubric">然后重复诗节一和集祷颂一。</p>
+
+<h1>向我们的主耶稣基督的祝文</h1>
+
+
+
+至睿至慈的主啊，我们的救主，祢以祢降临的光辉启明了世界的终结，祢向我们许诺了不朽的财富和永恒的宝藏，并藉此召唤我们进入祢神圣的教会。请仁慈地垂视我们——祢不配的仆役，请勿追究我们的不义，惟照祢无穷的慈悯赦免我们所有的罪过。因为我们虽然违背祢的圣意，却并未否认祢——我们的上帝及救主。我们惟独得罪了祢，然而，我们也惟独事奉祢，惟独信仰祢，惟独投奔祢，祢的仆人惟独冀望于祢。想到我们本性的软弱，仇敌的试探，世俗的诱惑，环绕我们四周的引诱，如祢所言，离开了祢的助佑，我们便丝毫无法抵抗这一切。求祢洁净我们并拯救我们；光照我们的理智，使我们能坚定地信仰祢，我们唯一的救赎者。求祢激励我们的心神，使我们能完全地爱慕祢，我们唯一的上帝和创造者。求祢引领我们的脚步，使我们能无误地行走在祢诫命的光辉中。我们的主及创造者，请向我们显示祢伟大而丰厚的仁慈，让我们一生的岁月都在圣善和真理中度过，如此，当祢荣耀地再来时，我们能够配得接受祢仁慈的召唤，进入祢天上的国度。求祢赏赐我们——祢有罪而无用的仆人——得以接受祢的国度，并且使我们在那无可言喻的美善福乐中，将荣耀归与祢，和祢的永恒之父，及祢的永生圣灵，世世无尽。阿们。
+
+
 
 
     </body>
 </html>
-
 
 
