--- a/prayerbook/html/prayer_group_0_en.html
+++ b/prayerbook/html/prayer_group_0_en.html
@@ -8,11 +8,11 @@
 	<meta name="changed" content="00:00:00"/>
 	<style type="text/css">
 		@page { margin: 1in }
-		p { margin-bottom: 0.1in; direction: ltr; color: #000000; font-family: "Arial", sans-serif; font-size: 11pt; font-style: normal; font-weight: normal; line-height: 120%; text-align: left; widows: 2; orphans: 2; text-decoration: none; page-break-before: auto; page-break-after: auto }
-		h1 { margin-top: 0.14in; margin-bottom: 0in; direction: ltr; color: #000000; font-family: "Trebuchet MS"; font-size: 16pt; font-style: normal; font-weight: normal; line-height: 115%; text-align: left; page-break-inside: avoid; widows: 2; orphans: 2; text-decoration: none; page-break-before: auto; page-break-after: auto }
+		p { margin-bottom: 0.1in; direction: ltr; color: #000000; font-family: "Arial", sans-serif;  font-style: normal; font-weight: normal; line-height: 120%; text-align: left; widows: 2; orphans: 2; text-decoration: none; page-break-before: auto; page-break-after: auto }
+		h1 { margin-top: 0.14in; margin-bottom: 0in; direction: ltr; color: #000000; font-family: "Trebuchet MS";  font-style: normal; font-weight: normal; line-height: 115%; text-align: left; page-break-inside: avoid; widows: 2; orphans: 2; text-decoration: none; page-break-before: auto; page-break-after: auto }
 	</style>
 </head>
-<body text="#000000" dir="ltr" style="border: none; padding: 0in">
+<body text="#000000" dir="ltr" style="border: none; padding: 0in; font-size:FONTSIZE">
 <h1 align="center" style="line-height: 115%; page-break-before: auto; page-break-after: auto"><a name="h.ewb00vy1fpvj"></a>
 THANKSGIVING PRAYER SERVICE</h1>
 <p style="margin-bottom: 0in; line-height: 115%; page-break-before: auto; page-break-after: auto">
