--- a/prayerbook/html/prayer_typica_0_ru.html
+++ b/prayerbook/html/prayer_typica_0_ru.html
@@ -13,7 +13,7 @@
 	-->
 	</STYLE>
 </HEAD>
-<BODY LANG="en-US" TEXT="#000000" DIR="LTR" STYLE="border: none; padding: 0in; font-size:FONTSIZE">
+<BODY LANG="en-US" TEXT="#000000" DIR="LTR" STYLE="border: none; padding: 0in; font-size:FONTSIZE;background-color:#FFE9D2 ">
 <P ALIGN=JUSTIFY STYLE="margin-bottom: 0in; line-height: 100%"><FONT COLOR="#ff0000"><FONT FACE="Times New Roman, serif"><I>&#1057;&#1090;&#1072;&#1088;&#1096;&#1080;&#1081;:</I></FONT></FONT></FONT></P>
 <P ALIGN=JUSTIFY STYLE="margin-bottom: 0in; line-height: 100%"><FONT FACE="Times New Roman, serif">&#1052;&#1086;&#1083;&#1080;&#1090;&#1074;&#1072;&#1084;&#1080;
 &#1057;&#1074;&#1103;&#1090;&#1099;&#1093; &#1054;&#1090;&#1077;&#1094;,
