Prayers view theming

--- a/prayerbook/html/prayer_communion_0_cn.html
+++ b/prayerbook/html/prayer_communion_0_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <h5>得救的罪人、季·米·罗曼诺夫　中译</h5>
