--- a/prayerbook/html/prayer_communion_0_en.html
+++ b/prayerbook/html/prayer_communion_0_en.html
@@ -7,7 +7,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <h4>Ode 1</h4>
