--- a/prayerbook/html/prayer_communion_1_en.html
+++ b/prayerbook/html/prayer_communion_1_en.html
@@ -7,7 +7,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <p><span class="rubric">Troparia, tone 4:</span> Let us, sinful
