--- a/prayerbook/html/prayer_communion_2_en.html
+++ b/prayerbook/html/prayer_communion_2_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <p></p><p><span class="rubric">Troparion:</span> O Angel of God, my holy
