--- a/prayerbook/html/prayer_communion_4_en.html
+++ b/prayerbook/html/prayer_communion_4_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <h1>The Liturgy of the Catechumens</h1>
