--- a/prayerbook/html/prayer_communion_5_cn.html
+++ b/prayerbook/html/prayer_communion_5_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 <p>
 荣耀归于你，上帝！<br>
