--- a/prayerbook/html/prayer_group_1_cn.html
+++ b/prayerbook/html/prayer_group_1_cn.html
@@ -7,7 +7,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <h1>向我们的主耶稣基督的圣颂典</h1>
