--- a/prayerbook/html/prayer_typica_0_cn.html
+++ b/prayerbook/html/prayer_typica_0_cn.html
@@ -13,7 +13,7 @@
 	-->
 	</STYLE>
 </HEAD>
-<BODY LANG="en-US" TEXT="#000000" DIR="LTR" STYLE="border: none; padding: 0in; font-size:FONTSIZE">
+<BODY LANG="en-US" TEXT="#000000" DIR="LTR" STYLE="border: none; padding: 0in; font-size:FONTSIZE;color:FONTCOLOR">
 <P ALIGN=JUSTIFY STYLE="margin-bottom: 0in; line-height: 100%"><FONT COLOR="#ff0000"><FONT FACE="Times New Roman, serif"><FONT><I>&#38263;&#32773;&#65306;</I></FONT></FONT></FONT></P>
 <P STYLE="margin-bottom: 0in"><FONT FACE="Times New Roman, serif"><FONT>&#22240;&#25105;&#20497;&#35576;&#32854;&#25945;&#29238;&#30340;&#20195;&#31153;&#65292;&#20027;&#32822;&#31308;&#22522;&#30563;&#25105;&#20497;&#30340;&#19978;&#24093;&#65292;&#27714;&#31074;&#24976;&#25003;&#25105;&#20497;&#12290;</FONT></FONT></P>
 <P STYLE="margin-bottom: 0in"><BR>
