--- a/prayerbook/html/prayer_communion_1_cn.html
+++ b/prayerbook/html/prayer_communion_1_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
         
 
 <h1>向至圣诞神女的圣颂典</h1>
