--- a/prayerbook/html/prayer_communion_3_cn.html
+++ b/prayerbook/html/prayer_communion_3_cn.html
@@ -7,7 +7,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
         
 
 
