--- a/prayerbook/html/prayer_communion_4_cn.html
+++ b/prayerbook/html/prayer_communion_4_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
         
 
 <h1>圣金口若望事奉圣礼</h1>
