--- a/prayerbook/html/prayer_daily_1_cn.html
+++ b/prayerbook/html/prayer_daily_1_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 <h1>三圣祈祷文</h1>
 <p>
