--- a/prayerbook/html/prayer_daily_1_en.html
+++ b/prayerbook/html/prayer_daily_1_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 
 <h1> Trisagion Prayers </h1>
