--- a/prayerbook/html/prayer_daily_2_cn.html
+++ b/prayerbook/html/prayer_daily_2_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
         
 
 <h1>开始工作前的祈祷</h1>
