--- a/prayerbook/html/prayer_group_1_en.html
+++ b/prayerbook/html/prayer_group_1_en.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
 
 <p class="rubric" align="center">Tone 2</p>
 
