--- a/prayerbook/html/prayer_group_3_cn.html
+++ b/prayerbook/html/prayer_group_3_cn.html
@@ -6,7 +6,7 @@
             </style>
     </head>
     
-    <body style="font-size:FONTSIZE;">
+    <body style="font-size:FONTSIZE;color:FONTCOLOR">
         
 
 <h1>独自诵念圣颂典和弗坐词仪轨</h1>
