--- a/prayerbook/html/prayer_communion_0_cn.html
+++ b/prayerbook/html/prayer_communion_0_cn.html
@@ -1,19 +1,3 @@
-<html>
-    <head>
-        <style>
-            .person { text-decoration: underline; }
-            .rubric { color: red; font-size: 80%; font-family: 华文仿宋, 仿宋; }
-            </style>
-    </head>
-    
-    <body style="font-size:FONTSIZE;color:FONTCOLOR">
-
-
-<h5>得救的罪人、季·米·罗曼诺夫　中译</h5>
-
-<h4>向我主耶稣基督忏悔的颂典
-</h4>
-
 
 <h4>圣歌 1</h4>
 
@@ -196,12 +180,5 @@
 
 <h4>向十字架圣颂 </h4>
 
-<p style="margin-left:1.0in">主啊，请拯救你的子民，并降福你的嗣业。恩赐虔诚君王克胜夷狄，并以你十字圣架护佑你的国民。</p>
-
-
-    </body>
-</html>
-
-
-
+<p>主啊，请拯救你的子民，并降福你的嗣业。恩赐虔诚君王克胜夷狄，并以你十字圣架护佑你的国民。</p>
 
