--- a/prayerbook/html/prayer_communion_0_en.html
+++ b/prayerbook/html/prayer_communion_0_en.html
@@ -1,15 +1,3 @@
-
-<html>
-    <head>
-        <style>
-            .person { text-decoration: underline; }
-            .rubric { color: red; font-size: 80%; font-family: 华文仿宋, 仿宋; }
-            </style>
-    </head>
-    
-    <body style="font-size:FONTSIZE;color:FONTCOLOR">
-
-
 <h4>Ode 1</h4>
 <p class="rubric" align="CENTER">Tone 6</p>
 
@@ -188,11 +176,5 @@
 
 <h4>The Troparion to the Cross</h4>
 
-<p style="margin-left:1.0in">O Lord, save Thy people and bless Thine inheritance. Grant victory to the Orthodox Christians over enemies; and by the power of Thy Cross do thou preserve Thy commonwealth.</p>
-
-
-
-    </body>
-</html>
-
+<p>O Lord, save Thy people and bless Thine inheritance. Grant victory to the Orthodox Christians over enemies; and by the power of Thy Cross do thou preserve Thy commonwealth.</p>
 
